--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,6 +1,7 @@
 body {
-    font-family: 'Libre Baskerville', serif;
-    font-size: 1rem;
+    color: #141414;
+    font-family: 'EB Garamond', serif;
+    font-size: 1em;
     margin: auto;
     width: 900px;
 }
@@ -16,13 +17,14 @@ img {
     grid-template-columns: 60% 40%;
     grid-template-rows: 20% 80%;
     margin-bottom: 40px;
-    padding: 25px 20px 20px 20px;
+    padding: 19px 20px 20px 20px;
     position: relative;
     width: 860px;
 }
 
 .title {
-    font-size: 1.6em;
+    font-weight: 500;
+    font-size: 1.8em;
     grid-column-start: 1;
     grid-column-end: 2;
     grid-row-start: 1;
@@ -31,28 +33,36 @@ img {
 }
 
 .date {
-    font-size: 0.8em;
+    font-weight: 500;
+    font-size: 1em;
     grid-column-start: 2;
     grid-column-end: 3;
     grid-row-start: 1;
     grid-row-end: 2;
     justify-self: end;
-    padding-top: 10px;
+    padding-top: 13px;
 }
 
 .description {
-    color: #606060;
-    font-size: 0.83em;
+    color: #474747;
+    font-size: 1em;
+    font-weight: 500;
     grid-column-start: 1;
     grid-column-end: 2;
     grid-row-start: 2;
     grid-row-end: 3;
+    line-height: 1.3;
     margin-top: 5px;
 }
 
 .statement {
     margin-bottom: 25px;
 }
+
+    .statement h1 {
+        font-size: 1.4em;
+        margin-top: 10px;
+    }
 
 .comment {
     color: black;
@@ -67,7 +77,7 @@ img {
         left: 0px;
         position: absolute;
         width: 20px;
-        top: -2px;
+        top: 1px;
     }
 
 .links {
