--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link href="https://fonts.googleapis.com/css2?family=Libre+Caslon+Text:wght@400;700&family=Libre+Franklin:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/assets/css/styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600;1,700;1,800&family=Libre+Franklin:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">     <meta charset="utf-8">
-    <link href="https://fonts.googleapis.com/css2?family=Libre+Caslon+Text&display=swap" rel="stylesheet"> 
-    <title>{{ page.title }}</title>
+    <meta charset="utf-8">
+    <title>Rajvir Samrai / {{ page.title }}</title>
   </head>
   <body>
     {% include business_card.html %}
+    {% include navigation.html %}
     {{ content }}
     {% include footer.html %}
   </body>
