--- a/_sass/business_card.scss
+++ b/_sass/business_card.scss
@@ -1,8 +1,12 @@
 .business_card {
     border-bottom: 1px solid black;
     font-family: 'Libre Franklin', serif;
-    font-size: 1.5em;
+    font-size: 1.6em;
     margin-bottom: 7px;
-    padding: 24px 0px;
+    padding: 20px 0px;
     text-align: center;
+}
+
+.business_card > h1 {
+    margin: 34px 0px;
 }
