--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,6 +1,6 @@
 body {
     color: #141414;
-    font-family: 'EB Garamond', serif;
+    font-family: 'Libre Franklin', serif;
     font-size: 1em;
     margin: auto;
     width: 900px;
@@ -14,53 +14,46 @@ img {
 .entry {
     border-top: 1px solid black;
     display: grid;
-    grid-template-columns: 60% 40%;
-    grid-template-rows: 20% 80%;
+    grid-template-columns: 3fr 2fr;
+    grid-template-rows: 70px 1fr;
     margin-bottom: 40px;
-    padding: 19px 20px 20px 20px;
+    padding: 0px 20px 0px 20px;
     position: relative;
     width: 860px;
 }
 
-.title {
-    font-weight: 500;
-    font-size: 1.8em;
-    grid-column-start: 1;
-    grid-column-end: 2;
-    grid-row-start: 1;
-    grid-row-end: 2;
-    justify-self: start;
+.title > h2{
+    font-weight: bold;
+    font-size: 1.6em;
+    text-align: left;
+    margin: 0px;
+    padding: 19px 0px;
 }
 
-.date {
-    font-weight: 500;
-    font-size: 1em;
-    grid-column-start: 2;
-    grid-column-end: 3;
-    grid-row-start: 1;
-    grid-row-end: 2;
-    justify-self: end;
-    padding-top: 13px;
+.date > h3{
+    font-weight: bold;
+    font-size: 0.9em;
+    text-align: right;
+    margin: 0px;
+    padding: 26px 0px;
 }
 
 .description {
-    color: #474747;
+    font-family: 'Libre Caslon Text', serif;
     font-size: 1em;
     font-weight: 500;
-    grid-column-start: 1;
-    grid-column-end: 2;
-    grid-row-start: 2;
-    grid-row-end: 3;
     line-height: 1.3;
-    margin-top: 5px;
+}
+
+.description > .statement > h3 {
+    margin: 0px;
 }
 
 .statement {
     margin-bottom: 25px;
 }
 
-    .statement h1 {
-        font-size: 1.4em;
+    .statement > h1 {
         margin-top: 10px;
     }
 
@@ -71,33 +64,29 @@ img {
     position: relative;
 }
 
-    .comment img {
-        display: block;
-        height: 20px;
-        left: 0px;
-        position: absolute;
-        width: 20px;
-        top: 1px;
-    }
+.comment > img {
+    display: block;
+    height: 20px;
+    left: 0px;
+    position: absolute;
+    width: 20px;
+    top: 0px;
+}
 
 .links {
     padding-left: 25px;
 }
 
-    .links a {
-        color: #606060;
-    }
+.links > ul > li > a {
+    color: #606060;
+}
 
-    .links ul {
-        list-style-type: none;
-        padding: 0px;
-    }
+.links > ul {
+    list-style-type: none;
+    padding: 0px;
+}
 
 .media {
-    grid-column-start: 2;
-    grid-column-end: 3;
-    grid-row-start: 2;
-    grid-row-end: 3;
     padding-top: 20px;
     text-align: right;
 }
