Update business card and add content to pages
I removed the contact page and moved contact info into the business
card area. I also added a picture to the business card. I am still
using the buzz on the moon placeholder. I also added some content
and styling to the about page. I replaced the contact page with a
games page.

--- a/_includes/business_card.html
+++ b/_includes/business_card.html
@@ -1,3 +1,7 @@
 <div class="business_card">
-  <h1>Rajvir Samrai</h1>
+  <h1 id="name">Rajvir Samrai</h1>
+  <ul id="contact_info">
+    <li>[firstname followed by lastname]@tutanota.com</li>
+  </ul>
+  <img id="portrait" src="/assets/images/temporary_pix_not_mosaic_buzz_on_the_moon.png">
 </div>
