--- a/_sass/business_card.scss
+++ b/_sass/business_card.scss
@@ -1,12 +1,43 @@
 .business_card {
     border-bottom: 1px solid black;
-    font-family: 'Libre Franklin', serif;
+    display: grid;
+    font-family: 'Libre Franklin', sans-serif;
     font-size: 1.6em;
     margin-bottom: 7px;
-    padding: 20px 0px;
-    text-align: center;
+    padding: 30px 20px 0px 20px;
+    text-align: left;
+
+    height: 219px;
+
+    grid-template-columns: 3fr 2fr;
+    grid-template-rows: 2fr 3fr;
 }
 
-.business_card > h1 {
-    margin: 34px 0px;
+#name {
+    margin: 0px 0px 20px 0px;
+
+    grid-column: 1 / span 1;
+    grid-row: 1 / span 1;
+}
+
+#contact_info {
+    font-size: 0.8em;
+    list-style: none;
+    margin: 0px;
+    padding: 0px;
+
+    grid-column: 1 / span 1;
+    grid-row: 2 / span 1;
+}
+
+#portrait {
+    width: 200px;
+    height: auto;
+
+    margin: 0px;
+
+    grid-column: 2 / span 1;
+    grid-row: 1 / span 2;
+
+    justify-self: right;
 }
