--- a/_sass/footer.scss
+++ b/_sass/footer.scss
@@ -5,6 +5,7 @@
 
 .footer {
     border-top: 1px solid black;
+    font-family: 'Libre Baskerville', serif;
     font-size: 0.9em;
     text-align: center;
 }
