--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -8,7 +8,7 @@ body {
 }
 
 img {
-    width: 300px;
+    width: 250px;
     height: auto;
 }
 
@@ -42,7 +42,6 @@ img {
 .description {
     font-family: 'Libre Baskerville', serif;
     font-size: 0.9em;
-    font-weight: 500;
     line-height: 1.3;
 }
 
@@ -54,9 +53,13 @@ img {
     margin-bottom: 25px;
 }
 
-    .statement > h1 {
-        margin-top: 10px;
-    }
+.statement > h1 {
+    margin-top: 10px;
+}
+
+.statement > p {
+    color: #474747;
+}
 
 .comment {
     color: black;
@@ -72,6 +75,10 @@ img {
     position: absolute;
     width: 20px;
     top: 0px;
+}
+
+.comment > p {
+    margin: 0px;
 }
 
 .links {
