--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -70,11 +70,11 @@ img {
 
 .comment > img {
     display: block;
-    height: 20px;
+    height: auto;
     left: 0px;
     position: absolute;
     width: 20px;
-    top: 0px;
+    top: 3px;
 }
 
 .comment > p {
