Implement blogging and update css to match

--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -2,7 +2,7 @@
 ---
 @import "main";
 @import "bio";
-@import "lists";
+@import "pieces";
 @import "business_card";
 @import "navigation";
 @import "footer";
