--- a/_sass/pieces.scss
+++ b/_sass/pieces.scss
@@ -1,30 +1,30 @@
-#lists {
+#pieces {
     border-top: 1px solid black;
     padding: 20px;
 }
 
-#lists > ul {
+#pieces > ul {
     line-height: 1.3;
     margin: 0px;
     padding: 0px;
 }
 
-#lists > ul > h2 {
+#pieces > ul > h2 {
     margin: 0px 0px 2px 0px;
     padding: 0px;
 }
 
-#lists > ul > h2 > a {
+#pieces > ul > h2 > a {
     color: #606060;
     text-decoration: none;
 }
 
-#lists > ul > h2 > a:hover {
+#pieces > ul > h2 > a:hover {
     color: #b83020;
     text-decoration: underline;
 }
 
-#list {
+#piece {
     font-family: "Libre Baskerville", serif;
     border-top: 1px solid black;
 }
