--- a/_sass/fonts.scss
+++ b/_sass/fonts.scss
@@ -4,8 +4,8 @@
     font-style: normal;
     font-weight: 700;
     src:local('Libre Franklin Bold'), local('LibreFranklin-Bold'),
-        url('../fonts/libre-franklin-v4-latin-ext_latin-700.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
-        url('../fonts/libre-franklin-v4-latin-ext_latin-700.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+        url('/assets/fonts/libre-franklin-v4-latin-ext_latin-700.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
+        url('/assets/fonts/libre-franklin-v4-latin-ext_latin-700.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
 /* libre-baskerville-regular - latin-ext_latin */
 @font-face {
@@ -13,8 +13,8 @@
     font-style: normal;
     font-weight: 400;
     src:local('Libre Baskerville'), local('LibreBaskerville-Regular'),
-        url('../fonts/libre-baskerville-v7-latin-ext_latin-regular.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
-        url('../fonts/libre-baskerville-v7-latin-ext_latin-regular.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+        url('/assets/fonts/libre-baskerville-v7-latin-ext_latin-regular.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
+        url('/assets/fonts/libre-baskerville-v7-latin-ext_latin-regular.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
 
 /* libre-baskerville-700 - latin-ext_latin */
@@ -23,6 +23,6 @@
     font-style: normal;
     font-weight: 700;
     src:local('Libre Baskerville Bold'), local('LibreBaskerville-Bold'),
-        url('../fonts/libre-baskerville-v7-latin-ext_latin-700.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
-        url('../fonts/libre-baskerville-v7-latin-ext_latin-700.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+        url('/assets/fonts/libre-baskerville-v7-latin-ext_latin-700.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
+        url('/assets/fonts/libre-baskerville-v7-latin-ext_latin-700.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
