Switch from png to webp

--- a/_includes/business_card.html
+++ b/_includes/business_card.html
@@ -3,5 +3,5 @@
   <ul id="contact_info">
     <li>rajvir.samrai@mail.utoronto.ca</li>
   </ul>
-  <img id="portrait" src="/assets/images/temporary_pix_not_mosaic_buzz_on_the_moon.png">
+  <img id="portrait" src="/assets/images/temporary_pix_not_mosaic_buzz_on_the_moon.webp">
 </div>
