Update content and add some social links

--- a/_includes/business_card.html
+++ b/_includes/business_card.html
@@ -2,6 +2,9 @@
   <h1 id="name">Rajvir Samrai</h1>
   <ul id="contact_info">
     <li>rajvir.samrai@mail.utoronto.ca</li>
+    <li><a href="https://twitter.com/rajvirsamrai">twitter</a></li>
+    <li><a href="https://github.com/rajvirsamrai/">github</a></li>
+    <li><a href="https://github.com/rajvirsamrai/">github</a></li>
   </ul>
   <img id="portrait" src="/assets/images/temporary_pix_not_mosaic_buzz_on_the_moon.webp">
 </div>
