Update styling for various links and list formatting

--- a/_includes/business_card.html
+++ b/_includes/business_card.html
@@ -4,7 +4,8 @@
     <li>rajvir.samrai@mail.utoronto.ca</li>
     <li><a href="https://twitter.com/rajvirsamrai">twitter</a></li>
     <li><a href="https://github.com/rajvirsamrai/">github</a></li>
-    <li><a href="https://github.com/rajvirsamrai/">github</a></li>
+    <li><a href="https://www.linkedin.com/in/rajvirsamrai/">linkedin</a></li>
+    <li><a href="">resume</a></li>
   </ul>
   <img id="portrait" src="/assets/images/temporary_pix_not_mosaic_buzz_on_the_moon.webp">
 </div>
