Add an underline to nav items when you hover and minor vocba

--- a/_sass/navigation.scss
+++ b/_sass/navigation.scss
@@ -20,6 +20,7 @@
 .line:hover {
     background-color: rgba(185, 185, 185, 0.1);
     color: #b83020;
+    text-decoration: underline;
 }
 
 #current {
