Update styling and a minor structural detail for the footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
 <div class="false_footer"></div>
 <div class="footer">
-    <p>&copy Copyright 2020 Rajvir Samrai All Rights Reserved</p>
+    &copy Copyright 2020 Rajvir Samrai All Rights Reserved
 </div>
