--- a/_sass/footer.scss
+++ b/_sass/footer.scss
@@ -6,6 +6,7 @@
 .footer {
     border-top: 1px solid black;
     font-family: 'Libre Baskerville', serif;
-    font-size: 0.9em;
+    font-size: 0.8em;
+    padding: 40px 0px;
     text-align: center;
 }
