--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
     <title>{% if page.title == "Games" %} Games by Rajvir Samrai {% else %} Rajvir Samrai / {{ page.title }} {% endif %}</title>
   </head>
   <body>
-    {% include business_card.html %}
+    {% include header.html %}
     {% include navigation.html %}
     {{ content }}
     {% include footer.html %}
