--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -4,7 +4,7 @@
 @import "main";
 @import "bio";
 @import "pieces";
-@import "business_card";
+@import "header";
 @import "navigation";
 @import "footer";
 @import "404";
