Removed projects page and updated header

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,9 @@
     Rajvir Samrai
   </div>
   <div id="subtitle">
-    <a href="assets/pdf/samrai_resume.pdf">resume</a> / <a href="">curriculum vitae</a>
+    <a id="resume" href="assets/pdf/samrai_resume.pdf">resume</a> /
+    <a id="github" href="https://github.com/rajvirsamrai/">github</a> /
+    <a id="twitter" href="https://twitter.com/rajvirsamrai">twitter</a>
   </div>
   <div id="subtitle">
     rajvir.samrai@mail.utoronto.ca
